[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/menus/feedback/tickbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/bylight/bylight.tres" type="FontFile" id=2]
[ext_resource path="res://gui/pause/options/options_menu.gd" type="Script" id=3]
[ext_resource path="res://gui/pause/options/locale_select.gd" type="Script" id=4]
[ext_resource path="res://gui/dialog/nx_box.tres" type="StyleBox" id=5]
[ext_resource path="res://gui/dialog/nx_wario_box.tres" type="StyleBox" id=6]
[ext_resource path="res://gui/dialog/nx_luigi_box.tres" type="StyleBox" id=7]
[ext_resource path="res://gui/pause/options/button_menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://gui/pause/options/touch_menu.tscn" type="PackedScene" id=9]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="List" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="CameraFix" parent="List" instance=ExtResource( 1 )]
offset_right = 624.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="List/CameraFix"]
offset_left = 23.0
offset_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Disable camera limiting [Try this if the camera is broken]"

[node name="TouchControls" parent="List" instance=ExtResource( 1 )]
offset_top = 24.0
offset_right = 624.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="List/TouchControls"]
offset_left = 23.0
offset_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Enable touch controls"

[node name="MuteMusic" parent="List" instance=ExtResource( 1 )]
offset_top = 48.0
offset_right = 624.0
offset_bottom = 68.0

[node name="Label" type="Label" parent="List/MuteMusic"]
offset_left = 23.0
offset_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Mute music"

[node name="MuteSFX" parent="List" instance=ExtResource( 1 )]
offset_top = 72.0
offset_right = 624.0
offset_bottom = 92.0

[node name="Label" type="Label" parent="List/MuteSFX"]
offset_left = 23.0
offset_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Mute SFX"

[node name="ShowTimer" parent="List" instance=ExtResource( 1 )]
offset_top = 96.0
offset_right = 624.0
offset_bottom = 116.0

[node name="Label" type="Label" parent="List/ShowTimer"]
offset_left = 23.0
offset_top = 2.0
custom_fonts/font = ExtResource( 2 )
text = "Show timer
"

[node name="LocaleSelect" type="OptionButton" parent="List"]
offset_top = 120.0
offset_right = 624.0
offset_bottom = 152.0
custom_minimum_size = Vector2( 0, 32 )
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
script = ExtResource( 4 )

[node name="ButtonMenu" parent="List" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 156.0
offset_right = 624.0
offset_bottom = 156.0

[node name="TouchMenu" parent="List" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 160.0
offset_right = 624.0
offset_bottom = 160.0

[connection signal="gui_input" from="." to="." method="_on_OptionsMenu_gui_input"]
[connection signal="item_selected" from="List/LocaleSelect" to="List/LocaleSelect" method="_on_Locale_item_selected"]
